--- a/grupal.html
+++ b/grupal.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+  
 </head>
 <body>
     <h1>Hola mundo</h1>
     <p><b> Primer parrafo </b></p>
+    <p>segundo parrafo</p>
 </body>
 </html>
