--- a/grupal.html
+++ b/grupal.html
@@ -11,8 +11,10 @@
     <h1>Hola mundo</h1>
     <p><b> Primer parrafo </b></p>
     <p>segundo parrafo</p>
+    
     <img scr="https://i.pinimg.com/564x/f6/49/e2/f649e26e524302207ebc924c0621549a.jpg">
     
     <p>tercer parrafo</p>
+    <p>cuarto parrafo</p>
 </body>
 </html>
