--- a/grupal.html
+++ b/grupal.html
@@ -8,7 +8,7 @@
   
 </head>
 <body>
-    <h1>Hola mundo</h1>
+    <h1> A continuación dejamos un párrafo de nuestra canción favorita </h1>
     <p><b> Primer parrafo </b></p>
     <p>segundo parrafo</p>
     
