Agregué párrafo de canción y un css

--- a/grupal.html
+++ b/grupal.html
@@ -5,16 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="grupal.css" rel="stylesheet" type="text/css">
   
 </head>
 <body>
     <h1> A continuación dejamos un párrafo de nuestra canción favorita </h1>
-    <p><b> Primer parrafo </b></p>
-    <p>segundo parrafo</p>
-    
-    <img scr="https://i.pinimg.com/564x/f6/49/e2/f649e26e524302207ebc924c0621549a.jpg">
-    
-    <p>tercer parrafo</p>
-    <p>cuarto parrafo</p>
+   <p> <strong> Algodón - Lasso </strong> <br> 
+    Sube de una vez la Torre de Babel <br>
+O que se caiga todo el piso del hotel <br>
+Arrópame con tu cuerpo <br>
+A ver quien llega primero</p>
 </body>
 </html>
