--- a/grupal.html
+++ b/grupal.html
@@ -16,6 +16,7 @@
   
     <p>tercer parrafo</p>
     <p>cuarto parrafo</p>
-
+ <img src="hasbullabostero.jpg" alt="">
+ <p>Parrafo cinco</p>
 </body>
 </html>
