cambie el tercer parrafo

--- a/grupal.html
+++ b/grupal.html
@@ -14,7 +14,12 @@
     
     <img scr="https://i.pinimg.com/564x/f6/49/e2/f649e26e524302207ebc924c0621549a.jpg">
     
-    <p>tercer parrafo</p>
+    <p><strong>eminem,slim shady</strong>
+        May I have your attention, please?
+        May I have your attention, please?
+        Will the real Slim Shady please stand up?
+        I repeat, will the real Slim Shady please stand up?
+        We're gonna have a problem here? <a href="https://www.youtube.com/watch?v=eJO5HU_7_1w&ab_channel=EminemVEVO">visita aqui la cancion</a></p>
     <p>cuarto parrafo</p>
 </body>
 </html>
