Añadí los enlaces a los nombres

--- a/grupal.html
+++ b/grupal.html
@@ -11,16 +11,16 @@
 <body>
     <h1> A continuación dejamos un párrafo de nuestra canción favorita </h1>
 
-    <p><strong>eminem,slim shady</strong>
-        May I have your attention, please?
-        May I have your attention, please?
-        Will the real Slim Shady please stand up?
-        I repeat, will the real Slim Shady please stand up?
-        We're gonna have a problem here? <a href="https://www.youtube.com/watch?v=eJO5HU_7_1w&ab_channel=EminemVEVO">visita aqui la cancion</a></p>
+    <p><strong> <a href="https://www.youtube.com/watch?v=eJO5HU_7_1w&ab_channel=EminemVEVO" > Eminem - Slim Shady </a> </strong> <br>
+        May I have your attention, please? <br>
+        May I have your attention, please? <br>
+        Will the real Slim Shady please stand up? <br>
+        I repeat, will the real Slim Shady please stand up? <br>
+        We're gonna have a problem here? </p>
     
 
 
-   <p> <strong> Algodón - Lasso </strong> <br> 
+   <p> <strong> <a href="https://www.youtube.com/watch?v=pMtYyOvwUJc" > Algodón - Lasso </a> </strong> <br> 
     Sube de una vez la Torre de Babel <br>
 O que se caiga todo el piso del hotel <br>
 Arrópame con tu cuerpo <br>
