Corregí un error en mi párrafo

--- a/grupal.html
+++ b/grupal.html
@@ -27,11 +27,11 @@
    <p> <strong> <a href="https://www.youtube.com/watch?v=pMtYyOvwUJc" > Algodón - Lasso </a> </strong> <br> 
 
     Sube de una vez la Torre de Babel <br>
-O que se caiga todo el piso del hotel <br>
-Arrópame con tu cuerpo <br>
-A ver quien llega primero</p>
+    O que se caiga todo el piso del hotel <br>
+    No puedo parar el tiempo <br>
+    Pero puedo hacerlo lento </p>
 
-<p><strong> <a href="https://www.youtube.com/watch?v=KAra1NWHHYw" > No Te Va Gustar - Cosa linda </a> </strong> <br>
+    <p><strong> <a href="https://www.youtube.com/watch?v=KAra1NWHHYw" > No Te Va Gustar - Cosa linda </a> </strong> <br>
     Cosa linda me trajo la vida<br>
     Que no necesito más<br>
     No le importa si tengo plata o si no<br>
