Corregí un error en mi párrafo

--- a/grupal.html
+++ b/grupal.html
@@ -27,7 +27,7 @@
    <p> <strong> <a href="https://www.youtube.com/watch?v=pMtYyOvwUJc" > Algodón - Lasso </a> </strong> <br> 
 
     Sube de una vez la Torre de Babel <br>
-    O que se caiga todo el piso del hotel <br>
+    Aunque se queje todo el piso del hotel <br>
     No puedo parar el tiempo <br>
     Pero puedo hacerlo lento </p>
 
